[gd_scene load_steps=8 format=3 uid="uid://han13f0vhrbr"]

[ext_resource type="Script" path="res://scenes/enemies/car.gd" id="1_26ciq"]
[ext_resource type="Texture2D" uid="uid://d3jm72tgjx1o8" path="res://graphics/car/main.png" id="1_ikmqy"]
[ext_resource type="Texture2D" uid="uid://hvirvpn7rtp3" path="res://graphics/car/turret.png" id="3_ksbwj"]
[ext_resource type="Texture2D" uid="uid://bbnyddmnrrtfp" path="res://graphics/explosions/gun.png" id="4_hjsyh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ybb11"]
radius = 759.352

[sub_resource type="Animation" id="Animation_d0p58"]
resource_name = "laser loud"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wy51s"]
_data = {
"laser loud": SubResource("Animation_d0p58")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_26ciq")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array(173, -170, 114, -172, 69, -168, 67, -128, 49, -126, 14, -133, 6, -133, -40, -91, -57, -98, -57, -111, -35, -110, -29, -138, -36, -170, -68, -183, -101, -184, -142, -175, -166, -173, -176, -150, -166, -114, -146, -114, -145, -83, -171, -87, -174, -57, -198, -54, -219, -54, -226, -45, -238, -35, -240, 25, -230, 39, -214, 49, -177, 48, -171, 81, -144, 82, -151, 103, -172, 105, -177, 136, -172, 169, -155, 172, -106, 177, -37, 172, -25, 141, -31, 105, -4, 128, 25, 128, 59, 118, 58, 163, 78, 169, 115, 172, 165, 166, 179, 157, 209, 159, 231, 124, 235, 94, 248, 85, 253, 59, 239, 52, 243, 35, 251, 23, 252, -30, 236, -50, 254, -77, 246, -96, 224, -144, 207, -170)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(59, -2)
rotation = 1.5708
texture = ExtResource("1_ikmqy")

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
rotation = 1.5708
texture = ExtResource("3_ksbwj")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(107, -28)
target_position = Vector2(520, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(0, 0, 517, 0)
width = 0.0
default_color = Color(1, 0.12549, 0.184314, 0.627451)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(108, 31)
target_position = Vector2(520, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, 0, 517, 0)
width = 0.0
default_color = Color(1, 0.12549, 0.184314, 0.627451)

[node name="Gun" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(161, -27)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_hjsyh")

[node name="Gun2" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(167, 32)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_hjsyh")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_ybb11")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wy51s")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
